--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="home swiper" id="home">
         <div class="swiper-wrapper">
             <div class="swiper-slide container">
-                <img src="./img/home1.jpg" alt="">
+                <img src="./home1.jpg" alt="">
                 <div class="home-text">
                     
                     <h1>Pushpa <br></h1>
